--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="app.AppMediator"
         android:theme="@style/AppTheme">
         <activity android:name=".NumeroIncActivity">
             <intent-filter>
@@ -16,7 +17,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity> android:name=".AppMediator"</activity>
     </application>
 
 </manifest>
